# keyvex

./: .eslintrc.json  .gitignore  ADMIN_DASHBOARD_README.md  AGENT_SPECS.md  AI_CORE_LOGIC_REFACTOR.md  BRAND_INTELLIGENCE_README.md  CLERK_SETUP.md  DARK_MODE_README.md  DEBUGGING_GUIDE.md  DEBUG_AUTH_README.md  DEVELOPMENT_CHECKLIST.md  DEVELOPMENT_STATUS.md  DIRECTORY_STRUCTURE.md  ISOLATED_AGENT_FIX_SUMMARY.md  OUR_AGENTIC_TOOL_CREATION_DIFFERENTIATOR.md  README-LOGGING.md  REFACTOR_PLAN_6-20.md  TECHNICAL_OUTLINE.md  TECHNICAL_OUTLINE_2.1.md  TECHNICAL_OUTLINE_2.md  TOOL_GENERATION_ARCHITECTURE_CHANGES.md  batch-update-agents.md  button-test-tool.js  button-test.js  debug-test-tool.js  enhancement_notes.txt  failure-types.ts  fix-imports.ps1  fix_preview.js  jest.config.ts  next.config.js  next.config.ts  original_page.txt  package-lock.json  package.json  temp_fix.txt  test-prompt-efficiency.js  test-sequential.ps1  test-typescript-strip.js  tsconfig.json
Dropbox/Source/Projects-24/langchain_practice-0/PY/autogen-full-tutorial-with-python/: README.md  __docker.py  agentchat_function_call_async.py  app.py  arithmatic.py  assistant.py  code_test.py  influencerfind.py  main.py  num_agents.py  numberguess.py  pyproject.toml  stock_prices.py  student.py  tools.py  tools2.py
Dropbox/Source/Projects-24/langchain_practice-0/PY/autogen-full-tutorial-with-python/cruise_promo/: bing_image_retrieve.py  bing_search.py  cruise_groups_scrape.py  google_search.py  image_gen1.py  image_gen2.py  research.py  research2.py  research3.py
scripts/: toggle-ai-debug.ps1
(+416 files in other folders)
